--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,9 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="itemLoveKeyTextView" parent="titleNormalTextView">
+
+    </style>
     <style name="titleSubNormalTextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
