Finish file download function

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,5 @@
     <dimen name="iconSizeMedium">40dp</dimen>
     <dimen name="iconSizeLarge">50dp</dimen>
     <dimen name="contentGap">5dp</dimen>
+    <dimen name="gridListChildSize">100dp</dimen>
 </resources>
