--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -9,7 +9,8 @@
     </data>
 
     <ImageView
+        binding:enableClick="@{true}"
         android:src="@{photo.imageUrl}"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_width="@dimen/gridListChildSize"
+        android:layout_height="@dimen/gridListChildSize"/>
 </layout>
