--- a/app/src/main/res/layout/list_empty.xml
+++ b/app/src/main/res/layout/list_empty.xml
@@ -4,7 +4,9 @@
     android:layout_height="match_parent">
     <TextView
         android:text="Empty"
+        android:background="#f00"
         android:layout_gravity="center"
+        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </FrameLayout>
