--- a/app/src/main/res/layout/list_tail.xml
+++ b/app/src/main/res/layout/list_tail.xml
@@ -2,6 +2,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:text="I'm last border"
+    android:background="#0f0"
     android:gravity="center"
     android:layout_height="wrap_content">
 
