Finish file download function

--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -11,6 +11,7 @@
     <ImageView
         binding:enableClick="@{true}"
         android:src="@{photo.imageUrl}"
+        android:scaleType="fitXY"
         android:layout_width="@dimen/gridListChildSize"
         android:layout_height="@dimen/gridListChildSize"/>
 </layout>
