--- a/app/src/main/res/layout/activity_love_detail.xml
+++ b/app/src/main/res/layout/activity_love_detail.xml
@@ -35,7 +35,8 @@
                 android:layout_weight="5"
                 android:gravity="center"
                 android:minWidth="50dp"
-                binding:onTextChange="@{vm}"
+                android:text="@={vm.title}"
+                android:hint="@string/title"
                 android:background="@android:color/transparent"
                 android:layout_marginTop="@dimen/contentGap"
                 style="@style/titleNormalTextView"/>
@@ -55,6 +56,8 @@
             android:layout_marginBottom="1dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:layout_height="wrap_content">
             <TextView
                 android:text="@{R.string.id}"
@@ -76,6 +79,8 @@
             android:layout_marginTop="1dp"
             android:layout_marginBottom="1dp"
             android:orientation="horizontal"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
@@ -96,6 +101,8 @@
         <LinearLayout
             android:layout_marginTop="1dp"
             android:layout_marginBottom="1dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -109,6 +116,7 @@
             <TextView
                 android:id="@+id/loveDetail_valueTimeTV"
                 binding:enableClick="@{true}"
+                android:text="@{Time.formatTime(vm.planTime)}"
                 android:singleLine="true"
                 android:gravity="left"
                 android:minWidth="50dp"
@@ -119,6 +127,8 @@
             android:visibility="@{null==vm.love?View.GONE:View.VISIBLE}"
             android:layout_marginTop="1dp"
             android:layout_marginBottom="1dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -140,6 +150,8 @@
         <LinearLayout
             android:layout_marginTop="1dp"
             android:layout_marginBottom="1dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -151,23 +163,18 @@
                 android:layout_marginRight="5dp"
                 style="@style/itemLoveKeyTextView"/>
             <EditText
-                android:id="@+id/loveDetail_contentET"
+                android:text="@={vm.content}"
                 android:singleLine="true"
                 android:gravity="left"
                 android:minWidth="50dp"
-                binding:onTextChange="@{vm}"
+                android:hint="@string/content"
                 android:background="@android:color/transparent"
                 style="@style/itemLoveKeyTextView"/>
         </LinearLayout>
 
-        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-            android:layout_marginTop="@dimen/contentGap"
+        <androidx.recyclerview.widget.RecyclerView
+            binding:adapter="@{vm.photoAdapter}"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <androidx.recyclerview.widget.RecyclerView
-                binding:adapter="@{vm.photoAdapter}"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+            android:layout_height="match_parent"/>
     </LinearLayout>
 </layout>
