Finish file download function

--- a/app/src/main/res/layout/item_conveyor.xml
+++ b/app/src/main/res/layout/item_conveyor.xml
@@ -4,7 +4,10 @@
     <data>
         <variable
             name="data"
-            type="com.merlin.transport.Convey" />
+            type="com.merlin.conveyor.Convey" />
+        <variable
+            name="title"
+            type="String" />
         <variable
             name="position"
             type="int" />
@@ -15,12 +18,11 @@
         <import type="com.merlin.client.R"/>
         <import type="com.merlin.util.Speed"/>
         <import type="android.view.View"/>
+        <import type="com.merlin.view.Clicker"/>
     </data>
     <LinearLayout
-        android:orientation="horizontal"
-        binding:enableClick="@{true}"
-        android:background="@drawable/selector_round_dark_corner_small"
-        android:gravity="center_vertical"
+        android:orientation="vertical"
+        binding:enableClick="@{Clicker.multiClick(data,true)}"
         android:layout_marginTop="3dp"
         android:layout_marginBottom="8dp"
         android:paddingLeft="3dp"
@@ -29,40 +31,55 @@
         android:paddingTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <TextView
-            android:text="@{``+position+`.`}"
-            style="@style/titleSubNormalTextView"/>
-        <TextView
-            android:gravity="left"
-            android:layout_marginLeft="3dp"
-            android:layout_weight="6"
-            android:text="@{data.name}"
-            style="@style/titleSubNormalTextView"/>
         <LinearLayout
-            android:layout_weight="2"
             android:orientation="horizontal"
-            android:gravity="right"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content">
+            android:gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
             <TextView
-                android:text="@{status}"
-                android:layout_margin="1dp"
-                android:textSize="10sp"
+                android:text="@{``+position+`.`}"
                 style="@style/titleSubNormalTextView"/>
             <TextView
-                android:text="@{data.speed>=0?Speed.formatNetworkSpeed(data.speed):``}"
-                android:layout_margin="1dp"
-                android:visibility="@{data.speed>0?View.VISIBLE:View.GONE}"
-                android:textSize="10sp"
-                style="@style/titleSubNormalTextView"/>
-            <TextView
-                android:text="@{FileSize.formatSizeText(data.conveyed)+`/`+FileSize.formatSizeText(data.total)}"
-                android:layout_margin="1dp"
-                style="@style/titleSubNormalTextView"/>
-            <ImageView
+                android:gravity="left"
                 android:layout_marginLeft="3dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_weight="6"
+                android:text="@{title}"
+                style="@style/titleSubNormalTextView"/>
+            <LinearLayout
+                android:layout_weight="2"
+                android:orientation="horizontal"
+                android:gravity="right"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content">
+                <TextView
+                    android:text="@{status}"
+                    android:layout_margin="1dp"
+                    android:textSize="10sp"
+                    style="@style/titleSubNormalTextView"/>
+                <TextView
+                    android:text="@{data.speed>=0?Speed.formatNetworkSpeed(data.speed):``}"
+                    android:layout_margin="1dp"
+                    android:visibility="@{data.speed>0?View.VISIBLE:View.GONE}"
+                    android:textSize="10sp"
+                    style="@style/titleSubNormalTextView"/>
+                <TextView
+                    android:text="@{FileSize.formatSizeText(data.conveyed)+`/`+FileSize.formatSizeText(data.total)}"
+                    android:layout_margin="1dp"
+                    style="@style/titleSubNormalTextView"/>
+            </LinearLayout>
         </LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:text="@{data.name}"
+            android:layout_margin="1dp"
+            android:singleLine="true"
+            style="@style/titleSubNormalTextView"/>
+    </LinearLayout>
+        <ProgressBar
+            android:progress="@{(int)(data.progress*100)}"
+            style="@style/itemProgressBar" />
     </LinearLayout>
 </layout>
