--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -99,5 +99,9 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1dp</item>
     </style>
-
+  <style name="itemProgressBar" parent="Widget.AppCompat.ProgressBar.Horizontal">
+      <item name="android:layout_width">match_parent</item>
+      <item name="android:layout_height">5dp</item>
+      <item name="android:progressDrawable">@drawable/seekbar</item>
+  </style>
 </resources>
