--- a/app/src/main/res/drawable/seekbar.xml
+++ b/app/src/main/res/drawable/seekbar.xml
@@ -3,20 +3,23 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@android:id/background">
         <shape>
-            <solid android:color="#ff51495e" />
+            <corners android:radius="15px" />
+            <solid android:color="#05ffffff" />
         </shape>
     </item>
     <item android:id="@android:id/secondaryProgress">
         <clip>
             <shape>
-                <solid android:color="#ff51495e" />
+                <corners android:radius="15px" />
+                <solid android:color="#66ffffff" />
             </shape>
         </clip>
     </item>
     <item android:id="@android:id/progress">
         <clip>
             <shape>
-                <solid android:color="#ff996dfe" />
+                <corners android:radius="15px" />
+                <solid android:color="#abffffff" />
             </shape>
         </clip>
     </item>
