--- a/app/src/main/res/layout/activity_love_detail.xml
+++ b/app/src/main/res/layout/activity_love_detail.xml
@@ -75,6 +75,7 @@
         </LinearLayout>
 
         <LinearLayout
+            binding:enableClick="@{true}"
             android:visibility="@{null==vm.love?View.GONE:View.VISIBLE}"
             android:layout_marginTop="1dp"
             android:layout_marginBottom="1dp"
@@ -99,6 +100,8 @@
         </LinearLayout>
 
         <LinearLayout
+            binding:enableClick="@{true}"
+            android:id="@+id/loveDetail_valueDateTV"
             android:layout_marginTop="1dp"
             android:layout_marginBottom="1dp"
             android:paddingTop="5dp"
@@ -107,16 +110,39 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
-                android:text="@{R.string.planTime}"
+                android:text="@{R.string.date}"
                 style="@style/itemLoveKeyTextView"/>
             <TextView
                 android:text=":"
                 android:layout_marginRight="5dp"
                 style="@style/itemLoveKeyTextView"/>
             <TextView
-                android:id="@+id/loveDetail_valueTimeTV"
+                android:text="@{``}"
+                android:singleLine="true"
+                android:gravity="left"
+                android:minWidth="50dp"
+                style="@style/itemLoveKeyTextView"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/loveDetail_valueTimeTV"
+            android:layout_marginTop="1dp"
+            android:layout_marginBottom="1dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:text="@{R.string.time}"
+                style="@style/itemLoveKeyTextView"/>
+            <TextView
+                android:text=":"
+                android:layout_marginRight="5dp"
+                style="@style/itemLoveKeyTextView"/>
+            <TextView
                 binding:enableClick="@{true}"
-                android:text="@{Time.formatTime(vm.planTime)}"
+                android:text="@{``}"
                 android:singleLine="true"
                 android:gravity="left"
                 android:minWidth="50dp"
