--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -6,10 +6,11 @@
         <variable
             name="photo"
             type="com.merlin.bean.Photo" />
+        <import type="com.merlin.view.Clicker"/>
     </data>
 
     <ImageView
-        binding:enableClick="@{true}"
+        binding:enableClick="@{Clicker.multiClick(photo,true)}"
         android:src="@{photo.imageUrl}"
         android:scaleType="fitXY"
         android:layout_width="@dimen/gridListChildSize"
