--- a/app/src/main/res/layout/item_conveyor.xml
+++ b/app/src/main/res/layout/item_conveyor.xml
@@ -55,9 +55,7 @@
                 android:text="@{``+position+`.`}"
                 style="@style/titleSubNormalTextView"/>
             <TextView
-                android:gravity="left"
                 android:layout_marginLeft="3dp"
-                android:layout_weight="6"
                 android:singleLine="true"
                 android:text="@{title}"
                 style="@style/titleSubNormalTextView"/>
@@ -69,6 +67,7 @@
                 android:layout_width="wrap_content">
                 <TextView
                     android:text="@{status}"
+                    android:layout_gravity="left"
                     android:layout_margin="1dp"
                     android:textSize="10sp"
                     style="@style/titleSubNormalTextView"/>
