--- a/app/src/main/res/layout/dialog_layout.xml
+++ b/app/src/main/res/layout/dialog_layout.xml
@@ -24,16 +24,15 @@
             android:orientation="vertical"
             android:gravity="center_horizontal"
             android:background="@drawable/round_corner_black"
-            android:layout_marginTop="40dp"
-            android:layout_marginBottom="40dp"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
             <TextView
                 android:text="@{titleText==null?``:titleText}"
+                android:singleLine="true"
                 android:visibility="@{titleText==null?View.GONE:View.VISIBLE}"
                 android:layout_marginBottom="15dp"
                 style="@style/titleNormalTextView"/>
