--- a/app/src/main/res/layout/item_list_file.xml
+++ b/app/src/main/res/layout/item_list_file.xml
@@ -14,24 +14,28 @@
         <variable
             name="position"
             type="int" />
+        <variable
+            name="thumbUrl"
+            type="Object" />
         <import type="android.view.View"/>
         <import type="com.merlin.view.Clicker"/>
         <import type="com.merlin.util.Time"/>
         <import type="com.merlin.client.R"/>
-        <import type="com.merlin.util.DefaultThumbs"/>
+        <import type="com.merlin.util.Thumbs"/>
         <import type="com.merlin.bean.LocalFile"/>
     </data>
     <RelativeLayout
         binding:enableClick="@{Clicker.multiClick(meta,true)}"
         android:layout_marginBottom="5dp"
         android:layout_width="match_parent"
+        binding:loadViewData="@{meta}"
         android:clickable="true"
         android:background="@{meta.accessible?R.drawable.selector_round_dark_corner_small:R.drawable.round_dark_corner_small_disable}"
         android:layout_height="@dimen/listItemNormal">
         <ImageView
             android:id="@+id/itemListFile_icon"
             android:layout_alignParentLeft="true"
-            android:src="@{meta.imageUrl??DefaultThumbs.getDefaultThumbByMeta(meta)}"
+            android:src="@{thumbUrl}"
             android:padding="2dp"
             android:layout_margin="1dp"
             android:layout_width="@dimen/listItemNormal"
