--- a/app/src/main/res/layout/file_browser_menu.xml
+++ b/app/src/main/res/layout/file_browser_menu.xml
@@ -24,6 +24,9 @@
 <!--            binding:menu="@{ContextMenu.create(R.string.setAsHome,folder)}"/>-->
         <include layout="@layout/item_context_menu"
             android:visibility="@{null!=folder?View.VISIBLE:View.GONE}"
+            binding:menu="@{ContextMenu.create(R.string.setAsHome,folder)}"/>
+        <include layout="@layout/item_context_menu"
+            android:visibility="@{null!=folder?View.VISIBLE:View.GONE}"
             binding:menu="@{ContextMenu.create(R.string.createFolder,folder)}"/>
         <include layout="@layout/item_context_menu"
             android:visibility="@{null!=folder?View.VISIBLE:View.GONE}"
